# ECUdeck

./: .editorconfig  .eslintrc-json  .gitignore  .prettierignore  AGENTS.md  HexViewer.cs  README.md  eslint.config.mjs  index.html  jest.config.js  lint-staged.config.js  mkdocs.yml  new structure plan.md  package-lock.json  package.json  postcss.config.js  tailwind.config.js  tsconfig.json  vite.config.ts
.husky/workflows/: lint.yml
core/: Cargo.toml  README.md
core/src/: lib.rs
core/tests/: plugin_manifest_discovery.rs  plugin_manifest_file_validation.rs
dev_notes/: ai-chat-review-architecture.md  ai-context-snapshot-schema.md  frontend-level-architecture.md  job-system-architecture.md  new structure plan.md  new-structure-plan.md  plugin-editor-architecture.md  plugin-system-architecture.md  rust-core-architecture.md  tauri-command-bridge-architecture.md  workspace-project-session-architecture.md
docs/: index.md
docs/developer-guide/: coding-standards.md  design-principles.md  documentation.md  environment-setup.md  ffi-memory-contract.md  index.md  plugins.md  python.md  releases.md  rust-performance.md  rust.md  testing.md
fixtures/: README.md
legacy/: README.md
legacy/python_backend/: EDC15PFileParser.cs  bin_calibration_finder.py  bin_header_parser.py  detect_ecu_metadata.py  edc15p_autolabel.py  maps.json
prisma/: schema.prisma
python_backend/: maps.json  plugin_loader.py
src/: App.tsx
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: contracts.rs  main.rs  plugin_contracts.rs
src-tauri/src/commands/: ai.rs  mod.rs  plugins.rs
(+58 files in other folders)
