[package]
name = "ecudeck_desktop"
version = "0.1.0"
description = "ECUDeck desktop shell"
authors = ["ECUDeck contributors"]
edition = "2021"

[build-dependencies]
tauri-build = { version = "2.0.0" }

[dependencies]
ecudeck_core = { path = "../core" }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tauri = { version = "2.0.0", features = [] }
